Add feature Rememeber me
